--- a/.gitignore
+++ b/.gitignore
@@ -135,13 +135,8 @@ publish/
 *.publishproj
 
 # NuGet Packages
-*.nupkg
-# The packages folder can be ignored because of Package Restore
-**/packages/*
-# except build/, which is used as an MSBuild target.
-!**/packages/build/
-# Uncomment if necessary however generally it will be regenerated when needed
-#!**/packages/repositories.config
+# The packages folder can be ignored because of Package Restore <-- false
+# no it can't because nuget is shat, and storage is cheap
 
 # Windows Azure Build Output
 csx/
